// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`defaults should accept Headers 1`] = `
[
  "/",
  {
    "headers": {
      "a": "1, 2",
      "b": "1",
      "c": "1",
    },
  },
]
`;

exports[`defaults should accept Headers 2`] = `
[
  "/",
  {
    "headers": {
      "a": "1, 2",
      "b": "2",
      "c": "1",
    },
  },
]
`;

exports[`defaults should add defaults 1`] = `
[
  "/",
  {
    "credentials": "include",
    "headers": {},
  },
]
`;

exports[`defaults should add defaults and headers 1`] = `
[
  "/",
  {
    "credentials": "include",
    "headers": {
      "content-type": "text/plain",
      "x-version": "1.0",
    },
  },
]
`;

exports[`defaults should add defaults and headers 2`] = `
[
  "/",
  {
    "credentials": "omit",
    "headers": {
      "content-type": "text/json",
    },
  },
]
`;

exports[`defaults should filter null or undefined: iterator 1`] = `
[
  "/",
  {
    "headers": {
      "c": "0",
      "d": "false",
      "e": "",
      "g": "1",
    },
  },
]
`;

exports[`defaults should filter null or undefined: plain 1`] = `
[
  "/",
  {
    "headers": {
      "c": "0",
      "d": "false",
      "e": "",
      "g": "1",
    },
  },
]
`;

exports[`defaults should work without options 1`] = `
[
  "/",
  {
    "headers": {},
  },
]
`;
